Spacing fix for work + things items in the grid, remove footer border

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -141,9 +141,9 @@ footer {
 	footer {
 		margin-top: 0;
 		.footer-top {
-			border-top:1px solid #4c4c4c;
+			/*border-top:1px solid #4c4c4c;
 			margin-top: 0;
-			padding-top: 80px;
+			padding-top: 80px;*/
 		}
 	}
 }
